--- a/_config.yml
+++ b/_config.yml
@@ -103,4 +103,6 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git 
+  repo: git@github.com:yangyuhemiss
+  branch: gh-pages
